@@ -130,7 +130,7 @@ extern char *OpenCreateFile _((char *, int));
 extern void PrintSynch _((ChannelList *));
 extern void StripAnsi _((char *, char *, int));
 extern int  matchmcommand _((char *, int));
-extern int  GrabURL _((char *, char *, char *, char *));
+extern int  GrabURL _((char *, char *, size_t, char *, char *, char *));
 extern void Ignore _((char *, char *, char *));
 extern void CheckPermBans _((ChannelList *));
 #ifdef EXTRAS
@@ -222,7 +222,8 @@ int  iscrypted;
     else thing = "*";
     if (URLCatch) {
         filepath = OpenCreateFile("ScrollZ.notepad", 1);
-        numurl = GrabURL(msg,tmpbuf4,filepath,nick);
+        numurl = GrabURL(msg,tmpbuf4,sizeof(tmpbuf4),filepath,nick,
+                         CmdsColors[COLMSG].color3);
         message = tmpbuf4;
     }
     else message = msg;
