@@ -61,6 +61,7 @@ NOTE: Homepage has been changed to http://www.scrollz.info/
     + SET SSL_VERIFY_CERTIFICATE to enable or disable certificate
       verification (default is ON)
     + SZsetup now shows colour string for current entry
+    + COLMISC color6 is used for URLs
 
 ------------------------------------------------------------------------------
 
